--- a/index.html
+++ b/index.html
@@ -3,26 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nodebox Starter</title>
+<link rel="stylesheet" href="style.css"/>
+
 </head>
 
 <body>
-
-  <header>
-    <h1><span class="nodebox_color">Nodebox</span> Playground</h1>
-    <p>
-      <a class="docs" href="https://sandpack.codesandbox.io/docs/advanced-usage/nodebox" target="_blank"
-        rel="noreferrer noopener">
-        Check docs for more examples
-      </a>
-    </p>
-  </header>
-
-  <iframe id="nodebox-runtime-iframe"></iframe>
-  <iframe id="nodebox-preview-iframe"></iframe>
-  <script type="module" src="/main.js"></script>
+<div class="container">
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  <div class="item"></div>
+  </div>
 </body>
 
 </html>
