--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
 </head>
 
 <body>
-  <div id="some">Some content</div>
+  
   <header id="pageHeader">Header</header>
+  <nav id="mainNav">Nav
+    <ul>
+      <li><a href="#one">Introdaction</a></li>
+      <li><a href="#two">Two</a></li>
+      <li><a id="three" href="three">Three</a></li>
+      <li><a id="four" href="four">Four</a></li>
+      <li><a id="five" href="five">Five</a></li>
+     <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      </ul>
+  </nav>
   <article id="mainArticle">
-    <main>
-      <section id="one">
+   <section id="one">
         <header>Introduction</header>
           <p>
             JavaScript is a cross-platform, object-oriented scripting language.
@@ -21,27 +32,89 @@
             objects of its environment to provide programmatic control over
             them.
           </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
       </section>
-  </main>
+      <section id="two">
+        <header>Two</header>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.
+          </p>
+      </section>
   </article>
-  
 
-  
-  <nav id="mainNav">Nav
-    <ul>
-      <li><a id="one" href="one">Introdaction</a></li>
-      <li><a id="two" href="tho">Two</a></li>
-      <li><a id="three" href="three">Three</a></li>
-      <li><a id="four" href="four">Four</a></li>
-      <li><a id="five" href="five">Five</a></li>
-    
-      <li>6</li>
-      <li>7</li>
-      <li>8</li>
-      </ul>
-        
-  </nav>
-  <div id="siteAds">Ads</div>
   <footer id="pageFooter">Footer</footer>
 
 
