--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <header id="pageHeader">Header</header>
-  <nav id="mainNav">Nav
+  <nav id="mainNav">
     <ul>
       <li><a href="#one">Introdaction</a></li>
       <li><a href="#two">Two</a></li>
@@ -114,7 +114,7 @@
           </p>
       </section>
   </article>
-
+<div id="siteAds">Ads</div>
   <footer id="pageFooter">Footer</footer>
 
 
