--- a/index.html
+++ b/index.html
@@ -9,8 +9,143 @@
 </head>
 <body>
   <header id="pageHeader">Header</header>
-  <article id="mainArticle">Article</article>
-  <nav id="mainNav">Nav</nav>
+  <article id="mainArticle">
+    <section id="one">
+        <header>One text</header>
+        <article>
+          <p>
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            some text
+            </p>
+        </article>
+        </section>
+         <section id="two">
+        <header>Two text</header>
+        <article>
+          <p>
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            some text two
+            </p>
+        </article>
+        </section>
+         <section id="three">
+        <header>Three text</header>
+        <article>
+          <p>
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            some text three
+            </p>
+        </article>
+        </section>
+         <section id="four">
+        <header>Four text</header>
+        <article>
+          <p>
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            some text four
+            </p>
+        </article>
+        </section>
+  </article>
+  
+  <nav id="mainNav">
+    <header>Documentation</header>
+    <ul>
+      <li><a href="#one">one</a>
+      <li><a href="#two">two</a>
+      <li><a href="#three">three</a>
+      <li><a href="#four">four</a>
+      </ul>
+    
+  </nav>
   <div id="siteAds">Ads</div>
   <footer id="pageFooter">Footer</footer>
 </body>
