--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 <div id='grid'>
-  <div class="item1">item1</div>
-  <div class="item2">item2</div>
-  <!-- <div class="item3">item3</div>
-  <div class="item4">item4</div>
-  <div class="item5">item5</div>
-  <div class="item6">item6</div> -->
+ <div>1</div>
+  <div>2</div>
+  <div>3</div>
+  <div id="inner-grid">
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
   </div>
+  
+  
+  <ul>
+  <li><label>Name:</label> <input name=fn>
+  <li><label>Address:</label> <input name=address>
+  <li><label>Phone:</label> <input name=phone>
+</ul>
 </body>
 </html>
